Actualizar docs salas
